# open_rust_timeseries_db

./: Cargo.toml  README.md  rust.pem  test
benches/: latency_benchmark.rs
docs/: architecture.md
src/: lib.rs  main.rs
src/core/: mod.rs  record.rs  types.rs
src/docs/: class_diagram.puml
src/engine/: db.rs  mod.rs
src/memory/: low_latency_mpmc_ring.rs  mod.rs  ring_buffer.rs
src/storage/: mod.rs  table.rs
src/tests/: integration_test.rs  mod.rs
src/utils/: mod.rs
src2/: README.md  lib.rs  main.rs  tests.rs
src2/core/: config.rs  instrument_index.rs  market_data.rs  mod.rs  record.rs
src2/db/: mod.rs  ultra_low_latency_db.rs
src2/memory/: instrument_buffer.rs  mod.rs  zero_alloc_ring_buffer.rs
src2/tests/: integration_test.rs
src3/: Cargo.toml  instrument_buffer_test.rs  instrument_buffer_test2.rs  lib.rs  test_utils.rs
src3/core/: config.rs  instrument_index.rs  market_data.rs  mod.rs  record.rs
src3/memory/: instrument_buffer.rs  zero_alloc_ring_buffer.rs
src3/tests/basic/: mod.rs  test.rs
src3/tests/production/: mod.rs  test.rs
src4/: Cargo.toml  lib.rs
src4/benches/: feed_benchmarks.rs
src4/feed/: websocket.rs
src4/src/: lib.rs
src4/src/feed/: types.rs  websocket.rs
src4/src/store/: global_market_data.rs  redis_manager.rs  schema.sql
src4/src/tests/: integration_test.rs  integration_test2.rs
src4/src/timeseries/: manager.rs
src4/store/: global_market_data.rs
src4/timeseries/: mod.rs
src5/: Cargo.toml
src5/benches/: feed_benchmarks.rs
src5/src/: lib.rs
src5/src/core/: mod.rs  record.rs
src5/src/feed/: mod.rs
src5/src/memory/: mod.rs  ring_buffer.rs
src5/src/store/: mod.rs  redis_manager.rs
src5/src/tests/: integration_test.rs  integration_test2.rs  mod.rs
src5/src/timeseries/: manager.rs  mod.rs
tests/: instrument_buffer_test.rs  market_data_integration_test.rs
