[package]
name = "ultra_low_latency_db"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Ultra-low-latency in-memory database optimized for HFT"
license = "MIT"

[dependencies]
# Concurrent hash map implementation
dashmap = "5.5.3"

[dev-dependencies]
# For benchmarking
criterion = "0.5.1"

[[bench]]
name = "latency_benchmark"
harness = false

[profile.release]
# Optimizations for performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"