[package]
name = "ultra_low_latency_db"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ultra_low_latency_db"
path = "src2/main.rs"

[lib]
name = "ultra_low_latency_db"
path = "src2/lib.rs"

[dependencies]
# Core dependencies
dashmap = "5.5.3"
crossbeam = "0.8.4"
parking_lot = "0.12.1"

[dev-dependencies]
criterion = "0.5.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = true  # Keep debug symbols for profiling
crossbeam = "0.8"
core_affinity = "0.8"